# Delusion-Loop-Interrupter

./: Authors.md  Changelog.md  Code_of_Conduct.md  Contributing.md  Credits.md  Installation.md  README.md  Safeguard Flowchart.md  bootstrap.py  pyproject.toml  requirements.txt
Mock Modules/: Mock Module Overview.md
Mock Modules/Bots/: Mock Generator.py  Mock Nutjob.py  Test Generator.py
Mock Modules/Location/: Mock Geolocator.py  Test Location.py
src/config/: config.json  config.py  settings.py
src/functions/: Functions Overview.md  detectEmotionalEscalation.py  detectRealityMode.py  factCheck.py  identifyRecursiveLoops.py  interfaceWithMentalHealthModules.py  mirrorDetection.py  trackSemanticDrift.py
src/protocols/: Protocols Overview.md  callHuman.py  confidenceOverlay.py  ethicalPause  ethicalPause.py  indulgentMode.py  mitigatingLanguage.py  protocol_utils.py  realityModePrompt.py  referToHuman  referToHuman.py  scopedMemory.py
src/utilities/: Utilities Overview  Utilities Overview.md  confidence.py  embedding.py  emotion.py  learning.py  location.py  logger.py  paraphrase.py  phraseEditor.py  profile.py  semantics.py  style.py  transcript.py
src/utilities/data/: phrases.json  repeatPhrases.json  toneMap.json
src/utilities/standalone/: configEditor.py  phraseEditor.py
